# name: test_move_sample_files_task[uvloop-False-False-False]
  <class 'dict'> {
    '_id': 'foo',
    'is_compressed': False,
    'is_legacy': False,
  }
---
# name: test_move_sample_files_task[uvloop-False-False-True]
  <class 'dict'> {
    '_id': 'foo',
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/download/samples/oictwh/reads_1.fq.gz',
        'from': <class 'dict'> {
          'id': 'vorbsrmz-17TFP120_S21_R1_001.fastq.gz',
          'name': 'vorbsrmz-17TFP120_S21_R1_001.fastq.gz',
          'size': 239801249712,
          'uploaded_at': None,
        },
        'name': 'reads_1.fq.gz',
        'raw': True,
        'size': 213889231,
      },
    ],
    'is_compressed': False,
    'is_legacy': True,
  }
---
# name: test_move_sample_files_task[uvloop-False-True-False]
  <class 'dict'> {
    '_id': 'foo',
    'is_compressed': True,
    'is_legacy': False,
  }
---
# name: test_move_sample_files_task[uvloop-False-True-True]
  <class 'dict'> {
    '_id': 'foo',
    'is_compressed': True,
    'is_legacy': True,
  }
---
# name: test_move_sample_files_task[uvloop-True-False-False]
  <class 'dict'> {
    '_id': 'foo',
    'is_compressed': False,
    'is_legacy': False,
  }
---
# name: test_move_sample_files_task[uvloop-True-False-True]
  <class 'dict'> {
    '_id': 'foo',
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/download/samples/oictwh/reads_1.fq.gz',
        'from': <class 'dict'> {
          'id': 'vorbsrmz-17TFP120_S21_R1_001.fastq.gz',
          'name': 'vorbsrmz-17TFP120_S21_R1_001.fastq.gz',
          'size': 239801249712,
          'uploaded_at': None,
        },
        'name': 'reads_1.fq.gz',
        'raw': True,
        'size': 213889231,
      },
      <class 'dict'> {
        'download_url': '/download/samples/oictwh/reads_2.fq.gz',
        'from': <class 'dict'> {
          'id': 'vorbsrmz-17TFP120_S21_R1_002.fastq.gz',
          'name': 'vorbsrmz-17TFP120_S21_R1_002.fastq.gz',
          'size': 239801249712,
          'uploaded_at': None,
        },
        'name': 'reads_2.fq.gz',
        'raw': True,
        'size': 213889231,
      },
    ],
    'is_compressed': False,
    'is_legacy': True,
  }
---
# name: test_move_sample_files_task[uvloop-True-True-False]
  <class 'dict'> {
    '_id': 'foo',
    'is_compressed': True,
    'is_legacy': False,
  }
---
# name: test_move_sample_files_task[uvloop-True-True-True]
  <class 'dict'> {
    '_id': 'foo',
    'is_compressed': True,
    'is_legacy': True,
  }
---
